--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,18 @@
 {
   "name": "client",
+  "proxy": "http://localhost:4000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
