--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^6.10.0"
+    "mongoose": "^6.10.0",
+    "react-helmet-async": "^1.3.0"
   }
 }
