--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.10.0"
   },
