--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "escape-string-regexp": "^5.0.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "http-proxy-middleware": "^2.0.6",
